Deprecated Endpoints removed.